name:                haskell-hangman
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Pablo Ramón Guevara
maintainer:          praguevara@gmail.com
copyright:           2019 Pablo Ramón Guevara
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell-hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , containers
                     , mtl
                     , transformers
